cluster/core/tekton-pipelines/tekton-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "tekton-pipelines"
  name: "tekton-dashboard-ingress"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    hajimari.io/enable: "true"
    hajimari.io/icon: "view-dashboard"
    hajimari.io/appName: "Tekton Dashboard"
spec:
  rules:
    - host: "tekton-dashboard.${SECRET_PRIVATE_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: "tekton-dashboard"
                port:
                  number: 9097
            path: "/"
            pathType: Prefix
  tls:
    - hosts:
        - "tekton-dashboard.${SECRET_PRIVATE_DOMAIN}"
